# rust-cad

./: Cargo.toml
cad-app/: Cargo.toml
cad-core/: Cargo.toml
cad-core/src/: doc.rs  dxf_io.rs  geom.rs  ifc.rs  ifc_io.rs  lib.rs  mesh.rs  model3d.rs  ops.rs  sheet.rs  truck_bridge.rs
cad-core/src/ifc/: ast.rs  import.rs  mod.rs  parse.rs  scanner.rs
cad-core/src/ifc_core/: IfcCharacterDecoder.rs  IfcEntityInstanceData.rs  IfcFile.rs  IfcHierarchyHelper.rs  IfcLogger.rs  IfcParse.rs  IfcSchema.rs  IfcSpfHeader.rs  IfcUtil.rs  mod.rs
cad-core/src/truck/truck-base/: Cargo.toml  README.md
cad-core/src/truck/truck-base/src/: cgmath64.rs  cgmath_extend_traits.rs  entry_map.rs  id.rs  lib.rs  newton.rs  tolerance.rs
cad-core/src/truck/truck-geometry/: Cargo.toml  README.md
cad-core/src/truck/truck-geometry/src/: lib.rs
cad-core/src/truck/truck-geotrait/: Cargo.toml
cad-core/src/truck/truck-geotrait/src/: lib.rs  polynomial.rs
cad-core/src/truck/truck-meshalgo/: lib.rs  vtk.rs
cad-core/src/truck/truck-meshalgo/analyzers/: collision.rs  in_out_judge.rs  splitting.rs  topology.rs  volume.rs
cad-core/src/truck/truck-meshalgo/filters/: normal_filters.rs  optimizing.rs  structuring.rs  subdivision.rs
cad-core/src/truck/truck-meshalgo/tessellation/: mod.rs  triangulation.rs
cad-core/src/truck/truck-modeling/: builder.rs  errors.rs  geom_impls.rs  geometry.rs  lib.rs  mapped.rs  primitive.rs  sweep.rs
cad-core/src/truck/truck-polymesh/: Cargo.toml
cad-core/src/truck/truck-polymesh/examples/: obj_stl.rs
cad-core/src/truck/truck-polymesh/src/: errors.rs  expand.rs  lib.rs  meshing_shape.rs  obj.rs  polyline_curve.rs  stl.rs
cad-core/src/truck/truck-polymesh/tests/: obj-io.rs
cad-core/src/truck/truck-shapeops/: Cargo.toml  README.md
cad-core/src/truck/truck-shapeops/examples/: punched-cube-shapeops.rs
cad-core/src/truck/truck-shapeops/src/: alternative.rs
cad-core/src/truck/truck-topology/: Cargo.toml
cad-core/src/truck/truck-topology/src/: edge.rs  errors.rs  face.rs  imported.rs  lib.rs  shell.rs  solid.rs  vertex.rs  wire.rs
cryxtal/cryxtal-geometry/: Cargo.toml
cryxtal/cryxtal-geometry/src/: errors.rs  lib.rs
cryxtal/cryxtal-geometry/src/decorators/: af_surface.rs  extruded_curve.rs  homotopy.rs  intersection_curve.rs  mod.rs  pcurve.rs  processor.rs  revolved_curve.rs  trimmed_curve.rs
cryxtal/cryxtal-geometry/src/decorators/rbf_surface/: algo.rs  mod.rs
cryxtal/cryxtal-geometry/src/nurbs/: bspcurve.rs  bspsurface.rs  knot_vec.rs  mod.rs  nurbscurve.rs  nurbssurface.rs
cryxtal/cryxtal-geometry/src/specifieds/: hyperbola.rs  line.rs  parabola.rs
cryxtal/cryxtal-geometry/tests/: af_surface.rs  bspcurve.rs  bspsurface.rs  circle.rs  hyperbolic.rs  intersection_curve.rs  nurbscurve.rs  nurbssurface.rs  pcurve.rs  plane.rs  processor.rs  rbf_surface.rs  revolved_curve.rs  sphere.rs  torus.rs
cryxtal/cryxtal-geotrait/: Cargo.toml  README.md
cryxtal/cryxtal-geotrait/src/: lib.rs  polynomial.rs
cryxtal/cryxtal-geotrait/src/algo/: curve.rs  mod.rs  surface.rs
cryxtal/cryxtal-geotrait/src/traits/: curve.rs  mod.rs  surface.rs
cryxtal/cryxtal-geotrait/tests/: curve.rs  derives.rs  surface.rs
cryxtal/cryxtal-meshalgo/: Cargo.toml  lib.rs  vtk.rs
cryxtal/cryxtal-meshalgo/analyzers/: collision.rs  in_out_judge.rs  mod.rs  splitting.rs  topology.rs  volume.rs
cryxtal/cryxtal-meshalgo/analyzers/point_cloud/: mod.rs  sort_end_points.rs
cryxtal/cryxtal-meshalgo/common/: triangulate.rs
cryxtal/cryxtal-meshalgo/filters/: normal_filters.rs  optimizing.rs  structuring.rs
cryxtal/cryxtal-meshalgo/tessellation/: mod.rs  triangulation.rs
cryxtal/cryxtal-modeling/: Cargo.toml  builder.rs  closed_sweep.rs  errors.rs  geom_impls.rs  geometry.rs  lib.rs  mapped.rs  multi_sweep.rs  primitive.rs  sweep.rs  topo_impls.rs
cryxtal/cryxtal-polymesh/: Cargo.toml  README.md
cryxtal/cryxtal-polymesh/examples/: obj_stl.rs
cryxtal/cryxtal-polymesh/src/: attributes.rs  expand.rs  faces.rs  lib.rs  polygon_mesh.rs  polyline_curve.rs  structured_mesh.rs
cryxtal/cryxtal-polymesh/tests/: obj-io.rs  stl-io.rs
cryxtal/cryxtal-shapeops/: Cargo.toml
cryxtal/cryxtal-shapeops/examples/: punched-cube-shapeops.rs
cryxtal/cryxtal-shapeops/src/: alternative.rs  lib.rs
cryxtal/cryxtal-shapeops/src/fillet/: mod.rs
cryxtal/cryxtal-shapeops/src/healing/: mod.rs  tests.rs
cryxtal/cryxtal-shapeops/src/transversal/divide_face/: mod.rs  tests.rs
cryxtal/cryxtal-shapeops/src/transversal/faces_classification/: mod.rs  tests.rs
cryxtal/cryxtal-shapeops/src/transversal/integrate/: mod.rs  tests.rs
cryxtal/cryxtal-shapeops/src/transversal/intersection_curve/: mod.rs
cryxtal/cryxtal-shapeops/src/transversal/loops_store/: mod.rs
cryxtal/cryxtal-shapeops/src/transversal/polyline_construction/: mod.rs
cryxtal/cryxtal-stepio/: Cargo.toml
cryxtal/cryxtal-stepio/examples/: shape-to-step.rs  step-to-mesh.rs
cryxtal/cryxtal-stepio/src/in/: mod.rs
cryxtal/cryxtal-stepio/src/in/step_geometry/: geom_impls.rs  mod.rs  sphere.rs  stepout_impls.rs
cryxtal/cryxtal-stepio/tests/input/: geometry.rs
cryxtal/cryxtal-stepio/tests/io/: ioi.rs  oi.rs
cryxtal/cryxtal-stepio/tests/output/: derive.rs  geometry.rs  templates.rs  topology.rs
cryxtal/cryxtal-topology/: Cargo.toml  README.md
cryxtal/cryxtal-topology/src/: compress.rs  edge.rs  face.rs  imported.rs  lib.rs  shell.rs  solid.rs  vertex.rs  wire.rs
cryxtal/cryxtal-topology/tests/: euler_operators.rs  extracases.rs  large-solid-torus.rs
ifc_core/: Cargo.toml  build.rs
ifc_core/cpp/: ifc_bridge.cpp  ifc_shim.hpp  patch_undef_status.h
ifc_core/ifcparse/: IfcEntityInstanceData.cpp  IfcEntityInstanceData.h  IfcFile.cpp  IfcFile.h  IfcParse.cpp  IfcParse.h  IfcSpfHeader.cpp  set_to_map_transformer.h  storage.h
ifc_core/include/: ifc_bridge.hpp
ifc_core/src/: bridge.rs  ffi.rs  lib.rs
ifc_rs-main/ifc_rs/: Cargo.toml
ifc_rs-main/ifc_rs/src/objects/opening_element/: serialize.rs
ifc_rs-main/ifc_rs_verify_derive/: Cargo.toml
ifc_rs-main/ifc_rs_verify_derive/src/: data_type.rs
(+75 files in other folders)
