[workspace]
members = [
    "cryxtal/cryxtal-base",
    "cryxtal/cryxtal-geometry",
    "cryxtal/cryxtal-geotrait",
    "cryxtal/cryxtal-topology",
    "cryxtal/cryxtal-polymesh",
    "cryxtal/cryxtal-modeling",
    "cryxtal/cryxtal-meshalgo",
    "cryxtal/cryxtal-shapeops",
    "cryxtal/cryxtal-stepio",
    "cryxtal/cryxtal-derivers"
]

default-members = [
    "cryxtal/cryxtal-base",
    "cryxtal/cryxtal-geometry",
    "cryxtal/cryxtal-geotrait",
    "cryxtal/cryxtal-topology",
    "cryxtal/cryxtal-polymesh",
    "cryxtal/cryxtal-modeling",
    "cryxtal/cryxtal-meshalgo",
    "cryxtal/cryxtal-shapeops",
    "cryxtal/cryxtal-stepio",
    "cryxtal/cryxtal-derivers"
]
resolver = "2"

[workspace.dependencies]
cryxtal-base     = { path = "cryxtal/cryxtal-base",     version = "0.5.0" }
cryxtal-geotrait = { path = "cryxtal/cryxtal-geotrait", version = "0.4.0" }
cryxtal-derivers = { path = "cryxtal/cryxtal-derivers", version = "0.1.0" }
cryxtal-geometry = { path = "cryxtal/cryxtal-geometry", version = "0.5.0" }
cryxtal-topology = { path = "cryxtal/cryxtal-topology", version = "0.6.0" }
cryxtal-polymesh = { path = "cryxtal/cryxtal-polymesh", version = "0.5.0" }
cryxtal-modeling = { path = "cryxtal/cryxtal-modeling", version = "0.5.0" }
cryxtal-meshalgo = { path = "cryxtal/cryxtal-meshalgo", version = "0.5.0" }
cryxtal-shapeops = { path = "cryxtal/cryxtal-shapeops", version = "0.1.0" }
cryxtal-stepio   = { path = "cryxtal/cryxtal-stepio",   version = "0.1.0" }