[workspace]
members = [
    "cryxtal/cryxtal-base",
    "cryxtal/cryxtal-geometry",
    "cryxtal/cryxtal-geotrait",
    "cryxtal/cryxtal-topology",
    "cryxtal/cryxtal-polymesh",
    "cryxtal/cryxtal-modeling",
    "cryxtal/cryxtal-meshalgo",
    "cryxtal/cryxtal-shapeops",
    "cryxtal/cryxtal-stepio",
    "cryxtal/cryxtal-derivers",
    "cad-core",
    "cad-app",
]
default-members = [
    "cryxtal/cryxtal-base",
    "cryxtal/cryxtal-geometry",
    "cryxtal/cryxtal-geotrait",
    "cryxtal/cryxtal-topology",
    "cryxtal/cryxtal-polymesh",
    "cryxtal/cryxtal-modeling",
    "cryxtal/cryxtal-meshalgo",
    "cryxtal/cryxtal-shapeops",
    "cryxtal/cryxtal-stepio",
    "cryxtal/cryxtal-derivers",
    "cad-core",
    "cad-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.81"

[workspace.dependencies]
# внутренние (с твоими версиями)
cryxtal-base     = { path = "cryxtal/cryxtal-base",     version = "0.5.0" }
cryxtal-geotrait = { path = "cryxtal/cryxtal-geotrait", version = "0.4.0" }
cryxtal-derivers = { path = "cryxtal/cryxtal-derivers", version = "0.1.0" }
cryxtal-geometry = { path = "cryxtal/cryxtal-geometry", version = "0.5.0" }
cryxtal-topology = { path = "cryxtal/cryxtal-topology", version = "0.6.0" }
cryxtal-polymesh = { path = "cryxtal/cryxtal-polymesh", version = "0.5.0" }
cryxtal-modeling = { path = "cryxtal/cryxtal-modeling", version = "0.5.0" }
cryxtal-meshalgo = { path = "cryxtal/cryxtal-meshalgo", version = "0.5.0" }
cryxtal-shapeops = { path = "cryxtal/cryxtal-shapeops", version = "0.1.0" }
cryxtal-stepio   = { path = "cryxtal/cryxtal-stepio",   version = "0.1.0" }

# внешние — единые версии везде
anyhow       = "1"
thiserror    = "1"
log          = "0.4"
env_logger   = "0.11"
rayon        = "1"
smallvec     = "1"
itertools    = "0.13"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
bytemuck     = { version = "1", features = ["derive"] }
bitflags     = "2"
approx       = "0.5"
glam         = "0.28"
