[package]
name = "cad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
dxf = "0.6.0"
cgmath = "0.18"
regex = "1"
lazy_static = "1.5.0"

truck-base     = { git = "https://github.com/ricosjp/truck" }
truck-geometry = { git = "https://github.com/ricosjp/truck" }
truck-modeling = { git = "https://github.com/ricosjp/truck", optional = true }

[features]
default = []
truck-brep = ["dep:truck-modeling"]