[package]
name = "cad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
dxf = "0.6.0"
cgmath = "0.18"
ifc_core = { path = "../ifc_core" }
earcutr = "0.5.0"
rocksdb = { version = "0.24.0", optional = true, default-features = false }

bitvec = "1.0"
regex = "1"
lazy_static = "1.5.0"
rayon = "1.11.0"
truck-base     = { git = "https://github.com/ricosjp/truck" }
truck-geometry = { git = "https://github.com/ricosjp/truck" }
truck-modeling = { git = "https://github.com/ricosjp/truck", optional = true }
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
truck-brep = ["dep:truck-modeling"]
ifopsh_with_rocksdb = ["dep:rocksdb"]