[package]
name = "ifc_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "ifc_schemas"

[lib]
name = "ifc_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.99"
autocxx = "0.30.0"
cxx = "1.0.184"

[build-dependencies]
cc = "1.2.37"
dunce = "1.0.5"
autocxx-build = "0.30.0"