[package]
name = "cryxtal-polymesh"
version = "0.6.0"
edition = "2021"
description = "defines polygon data structure and some algorithms handling mesh, including meshing the shapes"

keywords = ["truck", "graphics", "mesh", "obj", "stl"]
categories = ["graphics"]
exclude = ["examples/**/*.obj"]

[dependencies]
array-macro = "2.1.8"
bytemuck = { version = "1.23.2", features = ["derive"] }
itertools = "0.14.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.224", features = ["derive"] }
cryxtal-base = { version = "0.5.0", path = "../cryxtal-base" }
cryxtal-geotrait = { version = "0.4.0", path = "../cryxtal-geotrait" }
thiserror = "2.0.16"

[features]
default = []
# Enable tests that embed external fixture bytes via include_bytes!
fixtures = []
