[package]
name = "cryxtal-topology"
version = "0.6.0"
edition = "2021"
description = "topological structs: vertex, edge, wire, face, shell, and solid"


keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
serde = { version = "1.0.222", features = ["derive"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
cryxtal-base = { version = "0.5.0", path = "../cryxtal-base" }
cryxtal-geotrait = { version = "0.4.0", path = "../cryxtal-geotrait" }
thiserror = "2.0.16"
parking_lot = "0.12.4"
rclite = { version = "0.2.8", optional = true }

[features]
default = ["rclite"]
nightly = ["parking_lot/nightly"]

[dev-dependencies]
