[package]
name = "ifc_rs"
version = "0.1.0-alpha.9"
edition = "2021"
license = "MIT"
keywords = ["ifc", "standard", "buildings"]
authors = [
  "Michael Haebner <michael.hueber@metabuild.de>",
  "Gerasimos Kougianos <gerasimos.kougianos@metabuild.io>",
  "Robert Walter <robert.walter@metabuild.io>",
]
description = "A rust implementation of the IFC standard"
homepage = "https://github.com/MetabuildDev/ifc_rs"
repository = "https://github.com/MetabuildDev/ifc_rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
downcast-rs = "1.2"
bevy_math = { version = "0.16", default-features = false, features = ["libm"] }
ifc_rs_verify_derive = { path = "../ifc_rs_verify_derive", version = "0.1.0-alpha.9" }
itertools = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
syn = "2.0"
uuid = { version = "1.8", features = ["v4"] }
winnow = "0.6"

[dev-dependencies]
insta = "1.39"
regex = "1.10"

[profile.dev.package]
insta.opt-level = 3 
similar.opt-level = 3
