[package]
name = "truck-base"
version = "0.5.0"
edition = "2021"
description = "Basic structs and traits: importing cgmath, curve and surface traits, tolerance, etc..."

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
matext4cgmath = "0.1.0"
serde = { version = "1.0.222", features = ["derive"] }
rustc-hash = "2.1.1"

[dev-dependencies]
proptest = "1.7.0"
