[package]
name = "truck-geotrait"
version = "0.4.0"
edition = "2021"
description = "Defines geometric traits for truck"

[features]
default = []
derive = ["truck-derivers"]
polynomial = []

[dependencies]
truck-base = { version = "0.5.0", path = "../truck-base" }
rand = "0.9.2"
thiserror = "2.0.16"
truck-derivers = { version = "0.1.0", path = "../../../../../../Desktop/truck-master/truck-derivers", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
